prevent scrollbars from appearing on main window

--- a/public/styles.css
+++ b/public/styles.css
@@ -72,6 +72,7 @@ body {
 	color: var(--color-text-primary);
 	font-size: 16px;
 	font-family: sans-serif;
+	overflow: hidden;
 }
 
 body {
